Prevent img thumbnails and time ago span from being cut off on mobile and tablet devices

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -454,7 +454,7 @@ a.nav-forum {
   width: 100%;
   height: 200px;
   background: var(--gray15) no-repeat center center;
-  object-fit: cover;
+  object-fit: fill;
 }
 
 .post-card-content-link {
@@ -500,6 +500,7 @@ a.nav-forum {
 
 .post-card-meta {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-end;
   padding: 0 25px 25px 4px;
 }
@@ -630,6 +631,10 @@ a.nav-forum {
   font-weight: 500;
   letter-spacing: 0.5px;
   text-transform: uppercase;
+}
+
+time.meta-item {
+  margin-left: auto;
 }
 
 .meta-item-single {
